scraperManager tests fixed error after removing last source fixed HttpStatusException handling